fix: `*music playitem` on 1.21.4 (finally)